--- a/02_webpack5-ts-vue/package.json
+++ b/02_webpack5-ts-vue/package.json
@@ -38,6 +38,8 @@
     "style-loader": "^3.3.3",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
+    "unplugin-auto-import": "^0.16.6",
+    "unplugin-vue-components": "^0.25.2",
     "vue-loader": "^17.3.0",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
