--- a/03_webpack5-js-vue3/package.json
+++ b/03_webpack5-js-vue3/package.json
@@ -4,19 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config config/webpack.prod.js",
-    "dev": "webpack server --config config/webpack.dev.js"
+    "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.js",
+    "dev": "cross-env NODE_ENV=development webpack server --config config/webpack.dev.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "babel-loader": "^9.1.3",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "less-loader": "^11.1.3",
+    "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
     "postcss-preset-env": "^9.2.0",
@@ -26,6 +29,7 @@
     "unplugin-vue-define-options": "^1.3.18",
     "vue-loader": "^17.3.0",
     "webpack": "^5.88.2",
+    "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.9.0"
