--- a/03_webpack5-js-vue3/package.json
+++ b/03_webpack5-js-vue3/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
