--- a/05_vite-cli/package.json
+++ b/05_vite-cli/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^10.5.0",
+    "animate.css": "^4.1.1",
+    "gsap": "^3.12.2",
+    "lodash-es": "^4.17.21",
     "mitt": "^3.0.1",
     "vue": "^3.3.4"
   },
